--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,6 @@
 
     <dimen name="taxi_item_id_text_size">20sp</dimen>
     <dimen name="taxi_item_type_text_size">16sp</dimen>
+    <dimen name="error_text_size">18sp</dimen>
+
 </resources>
