--- a/app/src/main/res/layout/activity_taxi_map.xml
+++ b/app/src/main/res/layout/activity_taxi_map.xml
@@ -1,8 +1,31 @@
-<fragment xmlns:android="http://schemas.android.com/apk/res/android"
-          xmlns:tools="http://schemas.android.com/tools"
-          xmlns:map="http://schemas.android.com/apk/res-auto"
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          android:id="@+id/map"
-          tools:context="gyg.demo.mytaxitest.taxiMap.TaxiMapActivity"
-          android:name="com.google.android.gms.maps.SupportMapFragment"/>
+<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
+    <data>
+        <variable name="hideSearchButton" type="boolean"/>
+    </data>
+    <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        <fragment
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/map"
+                tools:context="gyg.demo.mytaxitest.taxiMap.TaxiMapActivity"
+                android:name="com.google.android.gms.maps.SupportMapFragment"/>
+
+        <TextView
+                android:background="@drawable/map_search_button_normal_bg"
+                android:id="@+id/map_search_button"
+                android:layout_width="wrap_content"
+                goneIf="@{hideSearchButton}"
+                android:layout_height="wrap_content"
+                android:text="@string/map_search_button_text"
+                android:layout_marginTop="@dimen/normal_margin"
+                android:textColor="@color/primary_text_color"
+                android:paddingStart="@dimen/normal_margin"
+                android:paddingEnd="@dimen/normal_margin"
+                android:paddingTop="@dimen/small_margin"
+                android:paddingBottom="@dimen/small_margin"
+                android:layout_gravity="center_horizontal|top"/>
+    </FrameLayout>
+</layout>
