--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
 <resources>
     <dimen name="taxi_item_icon_size">48dp</dimen>
     <dimen name="normal_margin">16dp</dimen>
+    <dimen name="small_margin">8dp</dimen>
     <dimen name="list_item_divider_margin">53dp</dimen>
 
     <dimen name="line_divider_size">1dp</dimen>
