Removed api key from the repo

--- a/app/src/debug/res/values/google_maps_api.xml
+++ b/app/src/debug/res/values/google_maps_api.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="google_maps_key" translatable="false" templateMergeStrategy="preserve">
-        AIzaSyDUsh3F9ucFFpvjUVfVIxAu8VannVh3xKA
+        API_KEY_HERE
     </string>
 </resources>
